--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "husky": "^8.0.3",
     "jsdom": "^23.0.1",
     "lint-staged": "^15.1.0",
-    "msw": "^2.0.10",
     "prettier": "^3.1.0",
     "vitest": "2.1.2"
   },
@@ -88,6 +87,7 @@
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.17",
     "@types/react-redux": "^7.1.25",
+    "@types/three": "^0.170.0",
     "@vitejs/plugin-react": "^4.2.0",
     "axios": "^1.3.2",
     "emotion-ts-plugin": "^2.0.1",
@@ -101,6 +101,7 @@
     "react-router-dom": "^6.27.0",
     "recharts": "^2.6.2",
     "sass-embedded": "^1.80.6",
+    "three": "^0.170.0",
     "typescript": "^4.9.4",
     "vite": "5.0.2",
     "vite-plugin-svgr": "^4.2.0"
